samples/java/jniviewer/app/src/main/jni/OcctJni_MsgPrinter.cxx
@@ -11,7 +11,7 @@
 // Alternatively, this file may be used under the terms of Open CASCADE
 // commercial license or contractual agreement.
 
-#include <OcctJni_MsgPrinter.hxx>
+#include "OcctJni_MsgPrinter.hxx"
 
 #include <TCollection_AsciiString.hxx>
 #include <TCollection_ExtendedString.hxx>
