samples/java/jniviewer/jni/Application.mk
@@ -1,8 +1,0 @@
-NDK_TOOLCHAIN_VERSION := 4.8
-APP_PLATFORM := android-15
-
-APP_ABI := armeabi-v7a
-#APP_ABI := all
-
-#APP_STL := gnustl_static
-#APP_STL := stlport_static
